--- a/2018工作总结.md
+++ b/2018工作总结.md
@@ -1,11 +1,13 @@
-1. 判断对象中是否有次属性的方法
+## 一月份
+
+### 1. 判断对象中是否有此属性的方法
 
 ```js
 obj.hasOwnProperty('id')
 ```
 
-2. `document.on()`的方法用不了，可能是版本问题
-3. 判断是否为`undefined`
+### 2. `$(document).on()`的方法用不了，可能是版本问题
+### 3. 判断是否为`undefined`
 
 ```js
 		if (typeof(val) == "undefined") { 
@@ -13,7 +15,7 @@ obj.hasOwnProperty('id')
 		}
 ```
 
-4. artTemplate嵌套模板
+### 4. artTemplate嵌套模板
 
 ```html
 <select class="w180 h30">
@@ -31,20 +33,20 @@ obj.hasOwnProperty('id')
 	</script>
 ```
 
-5. 判断对象是否为空
+### 5. 判断对象是否为空
 
 ```js
 Object.getOwnPropertyNames(data).length
 如果长度为0，就是空
 ```
 
-6. 写在行内的事件报错 is not define
+### 6. 写在行内的事件报错 is not define
 
 ```js
 $(function(){}) 在标签全部加载完后执行，所以没有绑定事件。
 ```
 
-7. 图片上传
+### 7. 图片上传
 
 ```html
 <!--
@@ -88,13 +90,13 @@ capture表示的是系统所捕获的默认设备，camera：照相机；camcord
     }
 ```
 
-8. 多选下拉框插件
+### 8. 多选下拉框插件
 
 > jquery.multiselect.js
 >
 > 通过你写入的option，自动生成多选的下拉框
 
-9. npm 打包的命令
+### 9. npm 打包的命令
 
 ```js
     "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
@@ -106,7 +108,7 @@ capture表示的是系统所捕获的默认设备，camera：照相机；camcord
 - 脚手架是不会给你打包出文件的，都是放热更新里面。
 - 要打包出dist文件就要执行`build`命令
 
-10. 去掉vue的#号
+### 10. 去掉vue的#号
 
 ```js
 var router = new VueRouter({hashbang: false, history: true})
@@ -181,6 +183,96 @@ gulp.task('default', function() {
 	gulp.start('trackMap');
 	gulp.start('queueqty');
 });
+
+```
+
+### 11. 冻结一个对象
+
+```js
+Object.freeze(obj) // 使其无法被修改
+// 好比双向数据绑定
+Object.preventExtensions(obj)  // 方法让一个对象变的不可扩展，也就是永远不能再添加新的属性。
+ Object.seal(obj) // 封印一个对象，让他里面的所有属性和值都无法被更改
+```
+
+- 深冻结
+
+```js
+//想让一个对象变得完全冻结,冻结所有对象中的对象,可以使用下面的函数.
+    function deepFreeze(o){
+        var prop,propKey;
+        Object.freeze(o);//首先冻结第一层对象
+        for(propKey in o){
+            prop = o[propKey];
+            if(!o.hasOwnProperty(propKey) || !(typeof prop === "object") || Object.isFrozen(prop)){
+                continue;
+            }
+            deepFreeze(prop);//递归
+        }
+    }
+```
+
+## 二月份
+
+### 1. 拿到vue当前最新的数据
+
+```js
+// vue原生 更新最新的数据后执行的回调函数
+this.$nextTick(function () {
+    _this.computedTotal();
+});
+```
+
+### 2. switch注意点
+
+> switch的case是通过全等对比的
+
+### 3. Element-ui的表格插件
+
+> 要在表格的行中插入操作列
+
+```html
+<el-table-column label="操作">
+    <template slot-scope="scope">
+        <el-button type="text" size="small" @click.native.prevent='minimunDetail(scope.row)'>查看/编辑</el-button>
+    </template>
+</el-table-column>
+
+<el-table-column label="操作">
+    <template slot-scope="scope">
+    <el-button
+      @click.native.prevent="deleteRow(scope.$index,数据)"
+      type="text"
+      size="small">
+      移除
+    </el-button>
+  </template>
+</el-table-column>
+```
+
+```js
+/*
+element表格做编辑功能
+有专门用来放操作的标签
+slot-scope="scope" 保存了当前列的所有对象
+scope.row 当前行的对象
+*/
+// 编辑、查看
+minimunDetail(id) {
+   // id 就是传进来的id 或者其他什么的
+}
+// 删除
+deleteRow(index, rows) {
+  rows.splice(index, 1);
+}
+```
+
+### 4. 禁用element-ui的按钮
+
+> 给标签加上 `:disabled` 属性, ***true***表示禁用
+
+```html
+<el-button type='primary' :disabled='true'>同意</el-button>
 
 ```
 
