--- a/2018工作总结.md
+++ b/2018工作总结.md
@@ -276,3 +276,128 @@ deleteRow(index, rows) {
 
 ```
 
+### 5. `v-once`  的使用
+
+> 如果页面中一些组件只是展示用的,加上这个属性。
+>
+> 在数据更新的时候就不会去重复渲染这条组件了
+>
+> 减轻渲染引擎的负担
+
+```html
+        <el-card class="box-card mb20" v-once>
+            <el-button class="ml20" size='small' type='success'>下载</el-button>
+            <el-button size='small' type='primary'>上传</el-button>
+        </el-card>
+```
+
+## 三月份
+
+###1. 在组件中使用v-model
+
+> v-model是用来做双向绑定数据的，在普通的vue实例中很好用。
+>
+> 但是自己封装的组件如何使用v-model呢?
+>
+> `v-model` 就相当于给当前标签做了两件事
+>
+> 1. 绑定动态属性`value`
+> 2. 绑定事件`input`
+
+```html
+<div id="app">
+  <ipt v-model="val"></ipt>
+</div>
+```
+
+- 相当于
+
+```html
+<div id="app">
+  <ipt :value='val' @input='val.arguments[0]'></ipt>
+</div>
+```
+
+> 所以你只要在封装的时候做两件事
+>
+> 1. 拿到一个props `value`
+> 2. input事件触发的时候去$emit一下父组件的`input`
+
+- 封装的input组件
+
+```js
+Vue.component('ipt', {
+      template: `
+        <span>
+          <input
+            :value="value"
+            @input="updateValue($event.target.value)"
+          >
+        </span>
+      `,
+      props: ['value'], // 1. 拿到props
+      methods: {
+        updateValue(val) {
+            this.$emit('input',val)
+          	// 2. 触发父组件的input事件
+        }
+      }
+});
+```
+
+- 父组件绑定
+
+```html
+<div id="app">
+    <ipt v-model="price"></ipt>
+    <button @click='showVal'>显示值</button>
+</div>
+```
+
+- price就是绑定输入的值
+
+
+### 2.多个element-ui 计数器的坑
+
+> 在列表中渲染多个值，后台并没有返回计数器的默认值的情况。
+>
+> 也就是要给渲染的数组手动添加一个默认值: 如`v.num`
+>
+> 但是这样添加只能更改值一次，并且值还不对
+
+```html
+<el-table-column label="盘点数量">
+  <template slot-scope="scope">
+    <el-input-number size="mini" :min="0" :max="10" v-model="scope.row.num" @change='getVal'></el-input-number>
+  </template>
+</el-table-column>
+```
+
+- js
+
+```js
+this.puhuoPartsDetail.map(v => {
+    v.num = 0;
+});
+```
+
+- 这样写无法达成想要的效果
+- 必须使用`this.$set(v,'num',0)` 
+
+```js
+//正确方式
+this.puhuoPartsDetail.map(v => {
+    this.$set(v,'num',0)
+});
+```
+
+#### `Vue.set`
+
+> 设置对象的属性。如果对象是响应式的，确保属性被创建后也是响应式的，同时触发视图更新。这个方法主要用于避开` Vue `不能检测属性被添加的限制。
+>
+> **也就是说当使用的数据要双向绑定，但发现绑了之后没有效果时候就用这个API**
+>
+> 在`vue`实例中使用的写法: `this.$set(要绑定值的对象,绑定的键,绑定的值)`
+
+> [参考](http://blog.csdn.net/winnie__wei/article/details/79426998)
+
